--- a/upload.html
+++ b/upload.html
@@ -86,7 +86,7 @@
                 <button id="upload-canceled-button" class="btn lila">Cancel</button>
             </div>
         </div>
-        <div id="sucessing-upload-step" class="search-sec video-width">
+        <div id="sucessing-upload-step" class="hidden-element">
             <div class="search-title">5.- Gifo uploaded sucessfully<img src="images/close.svg" alt="close icon"></div>
             <div class="gifo-created-div">
                 <div class="images-container">
