--- a/upload.html
+++ b/upload.html
@@ -96,8 +96,8 @@
                 </div>
                 <div class="gifo-created-btns">
                     <div><strong>Gifo created successfully!</strong></div>
-                    <button id="copy-url-gifo-btn" class="timer-btn">Copy your gifo link</button>
-                    <button id="download-gifo-btn" class="timer-btn">Donwload your gifo</button>
+                    <a id="copy-url-gifo-btn" class="timer-btn"> Copy your gifo link</a>
+                    <a id="download-gifo-btn" class="timer-btn">Donwload your gifo</a>
                 </div>                
             </div>
             <div class="recording-btn-style">
