--- a/upload.html
+++ b/upload.html
@@ -59,7 +59,7 @@
                 <div class="timestamp-div">
                     <div id="start-timestamp-div" class="timer-btn">Timestamping 1</div>
                 </div>
-                <button class="lila dropdown red-stop-btn"><img src="images/recording.svg" alt=""></button>
+                <button class="lila dropdown red-stop-btn"><img src="images/recording.svg" alt="recorder icon"></button>
                 <button id="stop-recording-button" class="btn2 lila red-stop-btn">Stop recording</button>
             </div>           
         </div>
